fixed some contrast

--- a/css/scripts.css
+++ b/css/scripts.css
@@ -346,7 +346,7 @@ header h1 {
 }
 
 #navWrapper {
-  background: #2ecc71;
+  background: #068a3d;
   color: white;
   padding: 10px 0;
   text-align: center;
@@ -361,7 +361,7 @@ header h1 {
   flex: 1;
 }
 #navWrapper nav li.active {
-  background: rgb(36.616, 162.384, 89.948);
+  background: rgb(3.875, 89.125, 39.3958333333);
 }
 #navWrapper nav a {
   color: white;
